--- a/mysql-service/src/main/resources/application.properties
+++ b/mysql-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=springuser
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example2
+spring.datasource.username=springuser2
 spring.datasource.password=ThePassword
 logging.file.name=/Users/ekortright/logs/mysqlservice/mysqlservice.log
-
